Created attractions view and view model
Also created attractions repository, service, changed model and database and changed packaging....

--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -56,6 +56,10 @@
                 <viewsAgent:NewPlaceView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:AgentAttractionsViewModel}">
+                <views:AgentAttractionsView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
