--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -60,6 +60,10 @@
                 <views:AgentAttractionsView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:ClientAttractionsViewModel}">
+                <views:ClientAttractionsView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
