--- a/TravelApp/DesktopHost/View/Client/ClientAttractionsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientAttractionsView.xaml
@@ -11,6 +11,183 @@
              xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
              SizeChanged="Window_SizeChanged">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="4*" />
+        </Grid.RowDefinitions>
+        <components:ClientNavigationView Grid.Row="0" SelectedIndex="1"></components:ClientNavigationView>
+
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0" 
+                       Text="All Attractions"
+                       FontSize="{Binding TextFontSize}"
+                       FontWeight="Medium"
+                       TextAlignment="Left"
+                       VerticalAlignment="Center"
+                       MaxWidth="439"
+                       Margin="40 0 0 0"/>
+
+            <WrapPanel 
+                Grid.Column="1" 
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Center" 
+                Margin="0 0 10 0">
+                <Border Width="{Binding FieldsWidth}" 
+                        Height="40" 
+                        Background="White" 
+                        BorderBrush="Gray" 
+                        BorderThickness="1"
+                        CornerRadius="15"
+                        >
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <materialDesign:PackIcon Grid.Column="0" 
+                                                 Kind="Magnify" 
+                                                 VerticalAlignment="Center" 
+                                                 Margin="5" />
+                        <Grid Grid.Column="1">
+                            <TextBox x:Name="myTextBox" 
+                                     Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}" 
+                                     FontFamily="Poppins" 
+                                     MaxLength="60" 
+                                     Background="Transparent" 
+                                     BorderThickness="0" 
+                                     Padding="5" 
+                                     VerticalContentAlignment="Center" 
+                                     FontSize="14" 
+                                     Foreground="Black"
+                                     Cursor="IBeam">
+                                <TextBox.Style>
+                                    <Style TargetType="TextBox">
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="TextBox">
+                                                    <Grid>
+                                                        <ScrollViewer x:Name="PART_ContentHost"/>
+                                                        <TextBlock Text="Search..." 
+                                                                   FontSize="14" 
+                                                                   FontFamily="Poppins" 
+                                                                   Foreground="Gray" 
+                                                                   VerticalAlignment="Center" 
+                                                                   Panel.ZIndex="1">
+                                                            <TextBlock.Style>
+                                                                <Style TargetType="TextBlock">
+                                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                                    <Style.Triggers>
+                                                                        <DataTrigger Binding="{Binding IsKeyboardFocused, RelativeSource={RelativeSource TemplatedParent}}" Value="False">
+                                                                            <Setter Property="Visibility" Value="Visible" />
+                                                                        </DataTrigger>
+                                                                    </Style.Triggers>
+                                                                </Style>
+                                                            </TextBlock.Style>
+                                                        </TextBlock>
+                                                    </Grid>
+                                                    <ControlTemplate.Triggers>
+                                                        <Trigger Property="IsKeyboardFocused" Value="True">
+                                                            <Setter TargetName="PART_ContentHost" Property="Visibility" Value="Visible" />
+                                                        </Trigger>
+                                                    </ControlTemplate.Triggers>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </TextBox.Style>
+                            </TextBox>
+                        </Grid>
+                    </Grid>
+                </Border>
+                <TextBlock
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    Text="Sort by:"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Margin="20 0 20 0"
+                    Foreground="Black"
+                    FontWeight="DemiBold"/>
+
+                <ComboBox
+                    SelectedIndex="{ Binding SelectedSort }"
+                    FontSize="15"
+                    Cursor="Hand"
+                    VerticalContentAlignment="Top"
+                    ItemsSource="{Binding SortCriteria}"
+                    Width="{Binding FieldsWidth}"
+                    Height="30"
+                    Margin="0 0 30 0"
+                    />
+            </WrapPanel>
+        </Grid>
+        <Grid Grid.Row="2" Margin="0 0 0 0">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <ItemsControl ItemsSource="{Binding FilteredAttractions}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border Margin="70 0 20 30" 
+                                    CornerRadius="30" 
+                                    Background="#DFE6F0">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="120"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Border CornerRadius="5">
+                                        <Image Source="../../../Style/Images/trip.png" 
+                                               Width="350" 
+                                               Height="auto" 
+                                               Margin="0 25 0 0"
+                                               Grid.Row="0"/>
+                                    </Border>
+                                    <TextBlock
+                                        Text="{Binding Name}"
+                                        TextWrapping="Wrap"
+                                        
+                                        VerticalAlignment="Center"
+                                        Width="350"
+                                        Grid.Row="1"
+                                        Margin="38 20 10 20"
+                                        Foreground="Black"
+                                        FontSize="30"
+                                        FontWeight="DemiBold"
+                                        />
+                                    <ScrollViewer VerticalScrollBarVisibility="Auto"
+                                                  Grid.Row="2"
+                                                  Height="130"
+                                                  Margin="0 0 0 40">
+                                        <TextBlock
+                                            Text="{ Binding Description }"
+                                            Width="350"
+                                            TextWrapping="Wrap"
+                                            Grid.Row="2"
+                                            Margin="20 0 20 0"
+                                            FontSize="17"
+                                            Foreground="#545454"
+                                            LineHeight="32"
+                                            />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </UserControl>
