--- a/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
@@ -148,21 +148,21 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border Margin="70 0 20 30" 
+                            <Border Margin="100 0 20 30" 
                                     CornerRadius="30" 
                                     Background="#DFE6F0">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
                                         <RowDefinition Height="Auto"/>
-                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="120"/>
                                         <RowDefinition Height="Auto"/>
                                         <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
 
                                     <Border CornerRadius="5">
                                         <Image Source="../../../Style/Images/trip.png" 
-                                               Width="350" 
+                                               Width="300" 
                                                Height="auto" 
                                                Margin="0 25 0 0"
                                                Grid.Row="1"/>
@@ -176,6 +176,7 @@
                                         Foreground="Black"
                                         FontSize="30"
                                         FontWeight="DemiBold"
+                                        VerticalAlignment="Center"
                                         />
                                     <TextBlock
                                             Text="{ Binding Description }"
@@ -186,27 +187,34 @@
                                             FontSize="17"
                                             Foreground="#545454"
                                             LineHeight="32"/>
-
-                                    <TextBlock
-                                        Grid.Row="4"
-                                        Width="180"
-                                        Text="{Binding Price}"
-                                        HorizontalAlignment="Center"
-                                        TextAlignment="Right"
-                                        Margin="100 0 120 20"
-                                        FontSize="32"
-                                        Foreground="#1E2F97"
-                                        FontWeight="SemiBold"
-                                        />
-                                    <TextBlock
-                                        Grid.Row="4"
-                                        Text="RSD"
-                                        HorizontalAlignment="Right"
-                                        Margin="0 0 50 20"
-                                        FontSize="32"
-                                        Foreground="#1E2F97"
-                                        FontWeight="SemiBold"
-                                        />
+                                    <Grid Grid.Row="4">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="3*"/>
+                                            <ColumnDefinition Width="1*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock
+                                            Grid.Row="4"
+                                            Grid.Column="0"
+                                            Width="170"
+                                            Text="{ Binding Price }"
+                                            TextAlignment="Right"
+                                            Margin="100 0 10 0"
+                                            FontSize="32"
+                                            Foreground="#1E2F97"
+                                            FontWeight="SemiBold"
+                                            />
+                                        <TextBlock
+                                            Grid.Row="4"
+                                            Grid.Column="1"
+                                            Text="RSD"
+                                            HorizontalAlignment="Right"
+                                            TextAlignment="Right"
+                                            Margin="0 0 15 0"
+                                            FontSize="32"
+                                            Foreground="#1E2F97"
+                                            FontWeight="SemiBold"
+                                            />
+                                    </Grid>
 
 
                                     <Button
@@ -216,7 +224,7 @@
                                         Background="#4889E6"
                                         BorderBrush="Transparent"
                                         Grid.Row="5" 
-                                        Margin="30 60 30 25"
+                                        Margin="20 60 30 25"
                                         HorizontalAlignment="Left"
                                         Foreground="White"
                                         FontSize="16"
@@ -237,7 +245,7 @@
                                         Foreground="Black"
                                         BorderBrush="Transparent"
                                         Grid.Row="5" 
-                                        Margin="0 60 40 25"
+                                        Margin="0 60 30 25"
                                         HorizontalAlignment="Right"
                                         FontSize="16"
                                         Height="36"
