--- a/TravelApp/DesktopHost/View/Client/ClientTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripsView.xaml
@@ -115,6 +115,7 @@
                     ItemsSource="{Binding SortCriteria}"
                     Width="{Binding FieldsWidth}"
                     Height="30"
+                    Margin="0 0 20 0"
                     />
             </WrapPanel>
         </Grid>
