--- a/TravelApp/DesktopHost/View/Client/ClientAttractionsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientAttractionsView.xaml
@@ -155,10 +155,13 @@
                                                Margin="0 25 0 0"
                                                Grid.Row="0"/>
                                     </Border>
-                                    <TextBlock
+                                    <ScrollViewer VerticalScrollBarVisibility="Auto"
+                                                  Grid.Row="1"
+                                                  Height="100"
+                                                  >
+                                        <TextBlock
                                         Text="{Binding Name}"
                                         TextWrapping="Wrap"
-                                        
                                         VerticalAlignment="Center"
                                         Width="350"
                                         Grid.Row="1"
@@ -167,6 +170,7 @@
                                         FontSize="30"
                                         FontWeight="DemiBold"
                                         />
+                                    </ScrollViewer>
                                     <ScrollViewer VerticalScrollBarVisibility="Auto"
                                                   Grid.Row="2"
                                                   Height="130"
