--- a/TravelApp/DesktopHost/View/Client/ClientSoldTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientSoldTripsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TravelApp.DesktopHost.View.ClientReservationsView"
+﻿<UserControl x:Class="TravelApp.DesktopHost.View.ClientSoldTripsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
              xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance Type=viewmodels:ClientReservationsViewModel}" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:ClientSoldTripsViewModel}" 
              Background="White"
              SizeChanged="Window_SizeChanged">
     <Grid>
@@ -20,7 +20,7 @@
                 <RowDefinition Height="4*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <components:ClientNavigationView Grid.Row="0" SelectedIndex="4"></components:ClientNavigationView>
+            <components:ClientNavigationView Grid.Row="0" SelectedIndex="3"></components:ClientNavigationView>
 
             <Grid Grid.Row="1" >
                 <Grid.ColumnDefinitions>
@@ -32,7 +32,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="1" 
-                            Text="My Reservations"
+                            Text="My Trips"
                             FontSize="{Binding TextSize}"
                             FontWeight="Medium"
                             VerticalAlignment="Center"
@@ -105,7 +105,7 @@
                           ScrollViewer.VerticalScrollBarVisibility="Visible"
                           ScrollViewer.HorizontalScrollBarVisibility="Auto"
                           BorderThickness="0"
-                          SelectionMode="Single">   
+                          SelectionMode="Single">
 
                     <DataGrid.Resources>
                         <Style TargetType="DataGridColumnHeader">
@@ -188,7 +188,7 @@
                                 SortMemberPath="Trip" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="Padding" Value="20" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding Trip}" />
@@ -196,12 +196,12 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        
+
                         <DataGridTextColumn Header="Price (RSD)" Binding="{Binding Price}" IsReadOnly="True" Width="*" 
                                 SortMemberPath="Price" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="Padding" Value="20" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding Price}" />
@@ -221,7 +221,7 @@
                             </DataGridTextColumn.Header>
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="Padding" Value="20" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding StartDate}" />
@@ -241,7 +241,7 @@
                             </DataGridTextColumn.Header>
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="Padding" Value="16" />
+                                    <Setter Property="Padding" Value="20" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding EndDate}" />
@@ -249,28 +249,29 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        
+
+                        <DataGridTextColumn Binding="{Binding TransactionDate, StringFormat='{}{0:d}'}" IsReadOnly="True" Width="*" 
+                                            SortMemberPath="TransactionDate" HeaderStyle="{StaticResource SortableColumnHeaderStyle}" >
+                            <DataGridTextColumn.Header>
+                                <DataGridColumnHeader Content="Purchase date">
+                                    <DataGridColumnHeader.ToolTip>
+                                        <ToolTip Content="Date format is MM/dd/yyyy" />
+                                    </DataGridColumnHeader.ToolTip>
+                                </DataGridColumnHeader>
+                            </DataGridTextColumn.Header>
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Padding" Value="20" />
+                                    <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                    <Setter Property="ToolTip" Value="{Binding TransactionDate}" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
                     </DataGrid.Columns>
                 </DataGrid>
             </materialDesign:Card>
-
-
-            <Grid Grid.Row="4">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="1" Width="200" Height="30" Content="Call off" Background="#DFE6F0" BorderBrush="#DFE6F0" Foreground="#161A25" BorderThickness="1" ToolTip="Click to call off selected reservation"
-                    Command="{Binding CallOff}"
-                    CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}"/>
-                
-                <Button Grid.Column="2" Width="200" Height="30" Content="Buy" Background="#4889E6" BorderBrush="#4889E6" BorderThickness="1" ToolTip="Click to buy selected trip"
-                    Command="{Binding Buy}"
-                    CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}"/>
-            </Grid>
-            
         </Grid>
     </Grid>
 </UserControl>
